--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mon Site de Physique</title>
+  <title>Dawoud ROGER</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -81,29 +81,46 @@
     </section>
 
     <section id="cv">
-      <h2>CV</h2>
-      <p><!-- Lien vers le CV ou informations de parcours --></p>
-    </section>
+  <h2>CV</h2>
+  <p>
+    Vous pouvez consulter mon CV ici : 
+    <a href="cv.pdf" target="_blank">Télécharger le CV (PDF)</a>
+  </p>
+
+  <h3>Formation</h3>
+  <ul>
+    <li>Licence 2 de Physique - Université de Bordeaux (2024–2025)</li>
+    <li>Licence 2 de Physique-Chimie - Université d'Angers (2022–2024)</li>
+  </ul>
+
+  <h3>Compétences</h3>
+  <ul>
+    <li>Programmation : Python, C, LaTeX</li>
+    <li>Physique : électromagnétisme, mécanique quantique, optique, thermodynamique, mécanique</li>
+    <li>Analyse de données, simulation numérique</li>
+  </ul>
+</section>
 
     <section id="physique">
       <h2>Physique</h2>
-      <p><!-- Projets ou articles liés à la physique --></p>
+      <ul>
+        <li>Projet bibliographique sur les paramètres de Stokes et leurs utilisations en astrophysique</li>
+        <li>Projet de calcul scientifique porté sur la résolution des équations cubiques et quartiques par la méthode de Newton-Raphson complexe</li>
+        <li>Projet bibliographique sur les ordinateurs quantiques et leurs utilisations </li>
+      </ul>
     </section>
 
-    <section id="ressources">
-      <h2>Ressources</h2>
-      <p><!-- Liens utiles, outils, documents --></p>
-    </section>
+  
 
     <section id="contact">
       <h2>Contact</h2>
-      <p><!-- Adresse email, réseaux, etc. --></p>
+      <p><!-- dawoudroger@gmail.com --></p>
     </section>
 
   </div>
 
   <footer>
-    <p>&copy; 2025 Ton Nom. Tous droits réservés.</p>
+    <p>&copy; 2025 Dawoud ROGER.</p>
   </footer>
 
 </body>
