--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dawoud ROGER</title>
+  <link rel="shortcut icon" href="icone.ico" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      line-height: 1.6;
+      background: #ffffff url('fond.jpg') no-repeat center top;
+      background-size: cover;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
+      color: #000;
     }
 
     header {
-      background: #1e2a38;
+      background: #6699ff;
       color: white;
-      padding: 20px 0;
+      padding: 20px;
       text-align: center;
     }
 
     nav {
-      background: #2f3b4d;
+      background: #003399;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
@@ -29,20 +31,38 @@
 
     nav a {
       color: white;
-      padding: 14px 20px;
+      padding: 10px 15px;
       text-decoration: none;
-      display: block;
     }
 
     nav a:hover {
-      background: #4f5d75;
+      background: #002266;
     }
 
     .container {
-      padding: 20px;
+      background: white;
       max-width: 900px;
       margin: auto;
-      background: white;
+      padding: 20px;
+    }
+
+    .about-section {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .about-text {
+      flex: 1;
+    }
+
+    .about-photo {
+      flex: 0 0 auto;
+    }
+
+    .about-photo img {
+      width: 150px;
+      border-radius: 10px;
     }
 
     section {
@@ -50,19 +70,32 @@
     }
 
     footer {
-      text-align: center;
-      padding: 20px;
-      background: #1e2a38;
+      background: #6699ff;
       color: white;
-      margin-top: 40px;
+      text-align: right;
+      padding: 10px 20px;
+      font-size: 0.9em;
+    }
+
+    a {
+      color: #003399;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    ul {
+      padding-left: 20px;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Bienvenue sur mon site</h1>
-    <p>Physique, CV, Projets et plus</p>
+    <h1>Dawoud ROGER</h1>
+    <p>Étudiant en physique – Université de Bordeaux</p>
   </header>
 
   <nav>
@@ -77,50 +110,73 @@
 
     <section id="apropos">
       <h2>À propos</h2>
-      <p><!-- Texte de présentation ici --></p>
+      <div class="about-section">
+        <div class="about-text">
+          <p><strong>Adresse :</strong><br>
+          Université de Bordeaux<br>
+          UFR de Physique<br>
+          France</p>
+
+          <p><strong>Email :</strong> dawoudroger@gmail.com<br>
+          <strong>Téléphone :</strong> 07 77 26 59 25</p>
+        </div>
+        <div class="about-photo">
+          <img src="photo.jpg" alt="Photo de Dawoud">
+        </div>
+      </div>
     </section>
 
     <section id="cv">
-  <h2>CV</h2>
-  <p>
-    Vous pouvez consulter mon CV ici :
-    <a href="cv.pdf" target="_blank">Télécharger le CV (PDF)</a>
-  </p>
+      <h2>CV</h2>
+      <p>Vous pouvez télécharger mon CV en PDF ici :
+        <a href="cv.pdf" target="_blank">Télécharger le CV</a>
+      </p>
 
-  <h3>Formation</h3>
-  <ul>
-    <li>Licence 2 de Physique - Université de Bordeaux (2024–2025)</li>
-    <li>Licence 2 de Physique-Chimie - Université d'Angers (2022–2024)</li>
-  </ul>
+      <h3>Formation</h3>
+      <ul>
+        <li>2024–2025 : Licence 2 de Physique – Université de Bordeaux (2ème de ma promo, notamment major d'algèbre)</li>
+        <li>2022–2024 : Licence 1 et 2 de Physique-Chimie – Université d'Angers</li>
+      </ul>
 
-  <h3>Compétences</h3>
-  <ul>
-    <li>Programmation : Python, C, LaTeX</li>
-    <li>Physique : électromagnétisme, mécanique quantique, optique, thermodynamique, mécanique</li>
-    <li>Analyse de données, simulation numérique</li>
-  </ul>
-</section>
+      <h3>Compétences</h3>
+      <ul>
+        <li>Langages : Python, C, LaTeX</li>
+        <li>Physique : électromagnétisme, quantique, optique, thermo, méca</li>
+        <li>Simulation numérique, analyse de données</li>
+      </ul>
+    </section>
 
     <section id="physique">
       <h2>Physique</h2>
       <ul>
-        <li>Projet bibliographique sur les paramètres de Stokes et leurs utilisations en astrophysique</li>
-        <li>Projet de calcul scientifique porté sur la résolution des équations cubiques et quartiques par la méthode de Newton-Raphson complexe</li>
-        <li>Projet bibliographique sur les ordinateurs quantiques et leurs utilisations </li>
+        <li><a href="#">Projet sur les paramètres de Stokes</a></li>
+        <li><a href="#">Méthode de Newton-Raphson complexe</a></li>
+        <li><a href="#">Ordinateurs quantiques et applications</a></li>
       </ul>
     </section>
 
-
+    <section id="ressources">
+      <h2>Ressources</h2>
+      <ul>
+        <li><a href="#">Cours et fiches</a></li>
+        <li><a href="#">Codes Python</a></li>
+        <li><a href="#">Liens utiles</a></li>
+      </ul>
+    </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p><!-- dawoudroger@gmail.com --></p>
+      <p>Vous pouvez me contacter par email ou téléphone :</p>
+      <ul>
+        <li>Email : <a href="mailto:dawoudroger@gmail.com">dawoudroger@gmail.com</a></li>
+        <li>Téléphone : 07 77 26 59 25</li>
+      </ul>
     </section>
 
   </div>
 
   <footer>
-    <p>&copy; 2025 Dawoud ROGER.</p>
+    <p>Dernière mise à jour : juin 2025</p>
   </footer>
 
 </body>
