--- a/index.html
+++ b/index.html
@@ -112,16 +112,8 @@
       <h2>À propos</h2>
       <div class="about-section">
         <div class="about-text">
-          <p><strong>Adresse :</strong><br>
-          Université de Bordeaux<br>
-          UFR de Physique<br>
-          France</p>
-
           <p><strong>Email :</strong> dawoudroger@gmail.com<br>
           <strong>Téléphone :</strong> 07 77 26 59 25</p>
-        </div>
-        <div class="about-photo">
-          <img src="photo.jpg" alt="Photo de Dawoud">
         </div>
       </div>
     </section>
@@ -134,8 +126,9 @@
 
       <h3>Formation</h3>
       <ul>
-        <li>2024–2025 : Licence 2 de Physique – Université de Bordeaux (2ème de ma promo, notamment major d'algèbre)</li>
+        <li>2024–2025 : Licence 2 de Physique – Université de Bordeaux (2ème de ma promo, notamment major d'algèbre linéaire et hermitienne)</li>
         <li>2022–2024 : Licence 1 et 2 de Physique-Chimie – Université d'Angers</li>
+        <li>2022 : Baccalauréat général avec spécialitées Mathématiques et Physique-Chimie</li>
       </ul>
 
       <h3>Compétences</h3>
@@ -146,32 +139,26 @@
       </ul>
     </section>
 
-    <section id="physique">
-      <h2>Physique</h2>
-      <ul>
-        <li><a href="#">Projet sur les paramètres de Stokes</a></li>
-        <li><a href="#">Méthode de Newton-Raphson complexe</a></li>
-        <li><a href="#">Ordinateurs quantiques et applications</a></li>
-      </ul>
-    </section>
+<section id="physique">
+  <h2>Physique</h2>
+  <ul>
+    <li><a href="stokes.pdf" target="_blank">Projet sur les paramètres de Stokes</a></li>
+    <li><a href="poster.pdf" target="_blank">Méthode de Newton-Raphson complexe</a></li>
+    <li>Projet sur les ordinateurs quantiques et applications</li>
+  </ul>
+</section>
+
 
     <section id="ressources">
       <h2>Ressources</h2>
       <ul>
-        <li><a href="#">Cours et fiches</a></li>
+<li><a href="deuxdex.html">Notes de cours</a></li>
         <li><a href="#">Codes Python</a></li>
         <li><a href="#">Liens utiles</a></li>
       </ul>
     </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Vous pouvez me contacter par email ou téléphone :</p>
-      <ul>
-        <li>Email : <a href="mailto:dawoudroger@gmail.com">dawoudroger@gmail.com</a></li>
-        <li>Téléphone : 07 77 26 59 25</li>
-      </ul>
-    </section>
+
 
   </div>
 
