--- a/index.html
+++ b/index.html
@@ -95,16 +95,10 @@
 
   <header>
     <h1>Dawoud ROGER</h1>
-    <p>Étudiant en physique – Université de Bordeaux</p>
+    <p>Étudiant en licence de physique – Université de Bordeaux</p>
   </header>
 
-  <nav>
-    <a href="#apropos">À propos</a>
-    <a href="#cv">CV</a>
-    <a href="#physique">Physique</a>
-    <a href="#ressources">Ressources</a>
-    <a href="#contact">Contact</a>
-  </nav>
+ 
 
   <div class="container">
 
@@ -134,7 +128,7 @@
       <h3>Compétences</h3>
       <ul>
         <li>Langages : Python, C, LaTeX</li>
-        <li>Physique : électromagnétisme, quantique, optique, thermo, méca</li>
+        <li>Physique : électromagnétisme, physique quantique, optique, thermodynamique, mécanique etc</li>
         <li>Simulation numérique, analyse de données</li>
       </ul>
     </section>
@@ -159,7 +153,13 @@
     </section>
 
 
-
+ <nav>
+    <a href="#apropos">À propos</a>
+    <a href="#cv">CV</a>
+    <a href="#physique">Physique</a>
+    <a href="#ressources">Ressources</a>
+    <a href="#contact">Contact</a>
+  </nav>
   </div>
 
   <footer>
