--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     }
 
     header {
-      background: #6699ff;
+      background: #858f70;
       color: white;
       padding: 20px;
       text-align: center;
     }
 
     nav {
-      background: #003399;
+      background: #7A708F;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
