--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     }
 
     header {
-      background: #858f70;
+      background: #42B3BD;
       color: white;
       padding: 20px;
       text-align: center;
     }
 
     nav {
-      background: #7A708F;
+      background: #6EC5CD;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
@@ -36,7 +36,7 @@
     }
 
     nav a:hover {
-      background: #002266;
+      background: #42B3BD;
     }
 
     .container {
@@ -70,7 +70,7 @@
     }
 
     footer {
-      background: #6699ff;
+      background: #6EC5CD;
       color: white;
       text-align: right;
       padding: 10px 20px;
