--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       <h3>Formation</h3>
       <ul>
-        <li>2024–2025 : Licence 2 de Physique – Université de Bordeaux (2ème de ma promo, notamment major d'algèbre linéaire et hermitienne)</li>
+        <li>2024–2025 : Licence 2 de Physique – Université de Bordeaux (2ème de ma promo, notamment major d'algèbre)</li>
         <li>2022–2024 : Licence 1 et 2 de Physique-Chimie – Université d'Angers</li>
         <li>2022 : Baccalauréat général avec spécialitées Mathématiques et Physique-Chimie</li>
       </ul>
