--- a/index.html
+++ b/index.html
@@ -5,91 +5,101 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dawoud ROGER</title>
   <link rel="shortcut icon" href="icone.ico" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #ffffff url('fond.jpg') no-repeat center top;
-      background-size: cover;
-      margin: 0;
-      padding: 0;
-      color: #000;
-    }
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #FFF9E3 url('fond.jpg') no-repeat center top; /* fond jaune clair */
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    color: #2E1A47; /* texte violet très foncé */
+  }
 
-    header {
-      background: #42B3BD;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
+  header {
+    background: #5B2C6F; /* violet profond */
+    color: #F4D35E; /* jaune doré */
+    padding: 20px;
+    text-align: center;
+  }
 
-    nav {
-      background: #6EC5CD;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
+  nav {
+    background: #7D3C98; /* violet moyen */
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 
-    nav a {
-      color: white;
-      padding: 10px 15px;
-      text-decoration: none;
-    }
+  nav a {
+    color: #F4D35E; /* jaune doré */
+    padding: 10px 15px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
 
-    nav a:hover {
-      background: #42B3BD;
-    }
+  nav a:hover {
+    background: #F4D35E; /* jaune doré */
+    color: #5B2C6F; /* violet profond */
+  }
 
-    .container {
-      background: white;
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-    }
+  .container {
+    background: white;
+    max-width: 900px;
+    margin: auto;
+    padding: 20px;
+    box-shadow: 0 0 15px rgba(91, 44, 111, 0.3);
+    border-radius: 8px;
+  }
 
-    .about-section {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
+  .about-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
 
-    .about-text {
-      flex: 1;
-    }
+  .about-text {
+    flex: 1;
+  }
 
-    .about-photo {
-      flex: 0 0 auto;
-    }
+  .about-photo {
+    flex: 0 0 auto;
+  }
 
-    .about-photo img {
-      width: 150px;
-      border-radius: 10px;
-    }
+  .about-photo img {
+    width: 150px;
+    border-radius: 10px;
+  }
 
-    section {
-      margin-bottom: 40px;
-    }
+  section {
+    margin-bottom: 40px;
+  }
 
-    footer {
-      background: #6EC5CD;
-      color: white;
-      text-align: right;
-      padding: 10px 20px;
-      font-size: 0.9em;
-    }
+  footer {
+    background: #7D3C98; /* violet moyen */
+    color: #F4D35E; /* jaune doré */
+    text-align: right;
+    padding: 10px 20px;
+    font-size: 0.9em;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
 
-    a {
-      color: #003399;
-      text-decoration: none;
-    }
+  a {
+    color: #5B2C6F; /* violet profond */
+    text-decoration: none;
+    font-weight: 600;
+  }
 
-    a:hover {
-      text-decoration: underline;
-    }
+  a:hover {
+    text-decoration: underline;
+    color: #F4D35E; /* jaune doré */
+  }
 
-    ul {
-      padding-left: 20px;
-    }
-  </style>
+  ul {
+    padding-left: 20px;
+  }
+</style>
+
 </head>
 <body>
 
@@ -142,7 +152,7 @@
 
 
     <section id="ressources">
-      <h2>Ressources</h2>
+      <h2>Ressources (pas à jour)</h2>
       <ul>
 <li><a href="deuxdex.html">Notes de cours</a></li>
         <li><a href="#">Codes Python</a></li>
