--- a/index.html
+++ b/index.html
@@ -6,39 +6,39 @@
   <title>Dawoud ROGER</title>
   <link rel="shortcut icon" href="icone.ico" />
 <style>
-  body {
+body {
   font-family: Arial, sans-serif;
-  background: #F9F9F9 url('fond.jpg') no-repeat center top; /* très clair, presque blanc */
+  background: #F9F9F9 url('fond.jpg') no-repeat center top;
   background-size: cover;
   margin: 0;
   padding: 0;
-  color: #7D7D7D; /* gris moyen pour texte */
+  color: #000000; /* texte en noir */
 }
 
 header {
-  background: #E8E8E8; /* gris clair chaud */
-  color: #7D7D7D; /* gris moyen */
+  background: #E8E8E8;
+  color: #000000; /* texte noir */
   padding: 20px;
   text-align: center;
 }
 
 nav {
-  background: #E8E8E8; /* gris clair chaud */
+  background: #E8E8E8;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
 nav a {
-  color: #7D7D7D; /* gris moyen */
+  color: #000000; /* liens en noir */
   padding: 10px 15px;
   text-decoration: none;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 nav a:hover {
-  background: #D1D1D1; /* gris clair un peu plus foncé au hover */
-  color: #5A5A5A; /* gris plus foncé au hover */
+  background: #D1D1D1;
+  color: #000000;
 }
 
 .container {
@@ -46,13 +46,13 @@ nav a:hover {
   max-width: 900px;
   margin: auto;
   padding: 20px;
-  box-shadow: none; /* pas trop voyant */
+  box-shadow: none;
   border-radius: 8px;
 }
 
 footer {
   background: #E8E8E8;
-  color: #7D7D7D;
+  color: #000000; /* texte noir */
   text-align: right;
   padding: 10px 20px;
   font-size: 0.9em;
@@ -61,14 +61,14 @@ footer {
 }
 
 a {
-  color: #7D7D7D;
+  color: #000000;
   text-decoration: none;
   font-weight: 600;
 }
 
 a:hover {
   text-decoration: underline;
-  color: #5A5A5A;
+  color: #000000;
 }
 
 ul {
@@ -106,7 +106,8 @@ ul {
       <ul>
         <li>2024–2025 : Licence 2 de Physique – Université de Bordeaux (2ème de ma promo, notamment major d'algèbre)</li>
         <li>2022–2024 : Licence 1 et 2 de Physique-Chimie – Université d'Angers</li>
-        <li>2022 : Baccalauréat général avec spécialitées Mathématiques et Physique-Chimie</li>
+        <li>2022 : Baccalauréat général avec spécialitées Mathématiques et Physique-Chimie, Lycée François Magendie</li>
+        <li> 2019 : Brevet des collèges marocains, collège Alexandre (ISO), Casablanca</li>
       </ul>
 
       <h3>Compétences</h3>
