--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ ul {
     <section id="ressources">
       <h2>Ressources (pas à jour)</h2>
       <ul>
-<li><a href="deuxdex.html">Notes de cours</a></li>
+<li><a href="deuxdex.html">Comptes rendus et notes de cours</a></li>
         <li><a href="#">Codes Python</a></li>
         <li><a href="#">Liens utiles</a></li>
       </ul>
