--- a/deuxdex.html
+++ b/deuxdex.html
@@ -71,16 +71,17 @@
 </head>
 <body>
   <header>
-    <h1>Notes de cours</h1>
+    <h1>Notes de cours et TP </h1>
     <nav>
       <a href="index.html">← Retour à l'accueil</a>
     </nav>
   </header>
   <main>
     <ul>
-      <li><a href="mecanique.pdf" target="_blank">Cours de mécanique (PDF)</a></li>
-      <li><a href="optique.pdf" target="_blank">Cours d’optique (PDF)</a></li>
-      <li><a href="thermodynamique.pdf" target="_blank">Cours de thermodynamique (PDF)</a></li>
+      <li><a href="optique2.pdf" target="_blank">TP2 d’optique</a></li>
+            <li><a href="optique3.pdf" target="_blank">TP3 d’optique</a></li>
+
+      <li><a href="dm.pdf" target="_blank">DM d'optique</a></li>
     </ul>
   </main>
 </body>
