--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@ ul {
       <h2>Astrophotographie</h2>
       <div class="astro-gallery">
         <div class="astro-item">
-          <img src="orion.jpg" alt="Nébuleuse d'Orion et compagnie">
-          <p>Nébuleuse d'Orion (M42), nébuleuse de la flamme et tête de cheval, capturées depuis Saucats avec un objectif Samyang 135mm.</p>
+          <img src="https://drive.google.com/uc?export=view&id=ID" loading="lazy" alt="..." />
+          <p>Nébuleuse d'Orion (M42), nébuleuse de la Flamme (NGC 2024) et nébuleuse de la Tête de Cheval (IC 434), capturées depuis Saucats avec un objectif Samyang 135mm, seulement 2èmin d'intégration le 12 avril 2025.</p>
         </div>
         <div class="astro-item">
           <img src="andro.jpg" alt="Andromède">
-          <p>Galaxie d'Andromède (Messier 31), à l'aide d'un Samyang 135mm.</p>
+          <p>Galaxie d'Andromède (Messier 31), photographié à l'aide d'un Samyang 135mm le 24 octobre 2024 (159*1min=2h39 d'intégration avec APN non défiltré), traité avec Siril.</p>
         </div>
       </div>
     </section>
