--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
   <title>Dawoud ROGER</title>
   <link rel="shortcut icon" href="icone.ico" />
   <style>
+<style>
 body {
   font-family: Arial, sans-serif;
-  background: #0b0f2a url('fond.jpg') no-repeat center top;
-  background-size: cover;
+  background: #fdfdfd;
   margin: 0;
   padding: 0;
-  color: #f5f5f5;
+  color: #222222;
 }
 
 header {
-  background: rgba(20, 20, 50, 0.8);
-  color: #ffffff;
+  background: #eaf3ff;
+  color: #222222;
   padding: 20px;
   text-align: center;
-  border-bottom: 2px solid #9ea9ff;
+  border-bottom: 2px solid #1e90ff;
 }
 
 nav {
-  background: rgba(20, 20, 50, 0.6);
+  background: #f0f8ff;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
 nav a {
-  color: #9ea9ff;
+  color: #1e90ff;
   padding: 10px 15px;
   text-decoration: none;
   font-weight: bold;
@@ -39,38 +39,34 @@ nav a {
 }
 
 nav a:hover {
-  background: rgba(255, 255, 255, 0.1);
-  color: #a86ef2;
+  background: #d6ebff;
+  color: #005ecb;
 }
 
 .container {
-  background: rgba(15, 15, 35, 0.85);
+  background: #ffffff;
   max-width: 900px;
   margin: auto;
   padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 20px rgba(158, 169, 255, 0.15);
 }
 
 footer {
-  background: rgba(20, 20, 50, 0.8);
-  color: #cccccc;
+  background: #eaf3ff;
+  color: #444444;
   text-align: right;
   padding: 10px 20px;
   font-size: 0.9em;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
 }
 
 a {
-  color: #9ea9ff;
+  color: #1e90ff;
   text-decoration: none;
   font-weight: 600;
 }
 
 a:hover {
   text-decoration: underline;
-  color: #a86ef2;
+  color: #005ecb;
 }
 
 ul {
@@ -90,20 +86,22 @@ ul {
 
 .astro-item {
   max-width: 300px;
-  background: rgba(255, 255, 255, 0.05);
+  background: #f7f9fb;
   border-radius: 8px;
   padding: 10px;
-  box-shadow: 0 2px 10px rgba(158, 169, 255, 0.1);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.05);
   text-align: center;
-  color: #f5f5f5;
+  color: #222222;
 }
 
 .astro-item img {
   width: 100%;
   height: auto;
   border-radius: 4px;
-  border: 1px solid #9ea9ff;
+  border: 1px solid #1e90ff;
 }
+</style>
+
   </style>
 </head>
 
@@ -168,7 +166,7 @@ ul {
       <h2>Astrophotographie</h2>
       <div class="astro-gallery">
         <div class="astro-item">
-          <img src="https://drive.google.com/uc?export=view&id=ID" loading="lazy" alt="..." />
+<img src="https://drive.google.com/uc?export=view&id=1G0BtkO2aR3oex3u76DXj5rc22xmKReqX" alt="image astro">
           <p>Nébuleuse d'Orion (M42), nébuleuse de la Flamme (NGC 2024) et nébuleuse de la Tête de Cheval (IC 434), capturées depuis Saucats avec un objectif Samyang 135mm, seulement 2èmin d'intégration le 12 avril 2025.</p>
         </div>
         <div class="astro-item">
