--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ ul {
 
       <h3>Compétences</h3>
       <ul>
+         <li>Langues : Anglais (C1 or above), Français (Natal) et Arabe littéraire (Natal)</li>
         <li>Langages : Python, C, LaTeX</li>
         <li>Physique : électromagnétisme, physique quantique, optique, thermodynamique, mécanique, etc.</li>
         <li>Simulation numérique, analyse de données</li>
@@ -166,7 +167,7 @@ ul {
       <h2>Astrophotographie</h2>
       <div class="astro-gallery">
         <div class="astro-item">
-<img src="https://drive.google.com/uc?export=view&id=1G0BtkO2aR3oex3u76DXj5rc22xmKReqX" alt="image astro">
+<img src="https://drive.google.com/uc?export=view&id=1G0BtkO2aR3oex3u76DXj5rc22xmKReqX" alt="orion region">
           <p>Nébuleuse d'Orion (M42), nébuleuse de la Flamme (NGC 2024) et nébuleuse de la Tête de Cheval (IC 434), capturées depuis Saucats avec un objectif Samyang 135mm, seulement 2èmin d'intégration le 12 avril 2025.</p>
         </div>
         <div class="astro-item">
