--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ ul {
       <div class="astro-gallery">
         <div class="astro-item">
 <img src="orion.jpg" alt="orion region">
-          <p>Nébuleuse d'Orion (M42), nébuleuse de la Flamme (NGC 2024) et nébuleuse de la Tête de Cheval (IC 434), capturées depuis Saucats avec un objectif Samyang 135mm, seulement 2èmin d'intégration le 12 avril 2025.</p>
+          <p>Nébuleuse d'Orion (M42), nébuleuse de la Flamme (NGC 2024) et nébuleuse de la Tête de Cheval (IC 434), capturées depuis Saucats avec un objectif Samyang 135mm, seulement 27min d'intégration le 12 avril 2025.</p>
         </div>
         <div class="astro-item">
           <img src="andro.jpg" alt="Andromède">
